Added HeatMap chart and backing functionality for contributors.

--- a/src/main/webapp/resources/css/locStyle.css
+++ b/src/main/webapp/resources/css/locStyle.css
@@ -17,3 +17,13 @@
 .areaLinesRemoved {
     fill: #de7f8259;
 }
+
+.focus circle {
+    fill: steelblue;
+    stroke: steelblue;
+}
+
+.overlay {
+    fill: none;
+    pointer-events: all;
+}
