- Fixed file name bug for rule violations list PMD - Beautified string naming - Added navigation to choose other users - Added styling for hovering heatmap

--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -1,8 +1,8 @@
 svg {
-    font: 10px sans-serif;
+    font-size: 10px;
 }
 
-a rect:hover {
+a:hover rect {
     stroke-width: 2px;
     stroke: rgb(0,0,0);
 }
