Added overview service backend results to frontend Made the overview LOC section load dynamically Added enum for handling multiple languages/file extensions Corrected references to non-existing jquery

--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -31,3 +31,24 @@ tspan:last-child {
 a:hover tspan:last-child {
     fill-opacity: 1.0;
 }
+
+#dateSelectorSlider {
+    width: 99%;
+    margin-bottom: 10px
+}
+
+/*ul li:active li a {*/
+    /*background-color: black;*/
+/*}*/
+
+#overview {
+    margin-top: 2%;
+}
+
+.card {
+    min-height: 235px;
+}
+
+.margin-left-8px {
+    margin-left: 8px;
+}
