Added antipatterns: conglomerate, single point of failure, medium and huge changes Todo: add time selector to medium and huge changes antipattern

--- a/src/main/webapp/resources/css/locStyle.css
+++ b/src/main/webapp/resources/css/locStyle.css
@@ -1,4 +1,7 @@
-.axis { font: 14px sans-serif; }
+.axis {
+    font: 14px sans-serif;
+    font-weight: 500;
+}
 
 .lineLinesAdded {
     fill: none;
@@ -23,7 +26,7 @@
 }
 
 .areaLoc {
-    fill: #55c65b;
+    fill: #325d8880;
 }
 
 #tooltip-add-remove {
