- added overview data + UI fixes - corrected SPoF and Conglomerate anti-patterns

--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -64,7 +64,7 @@ a:hover tspan:last-child {
 }
 
 #dateSelectorSlider {
-    width: 98%;
+    width: 1580px;
     margin-bottom: 10px;
 }
 
@@ -76,4 +76,8 @@ a:hover tspan:last-child {
 g.node:hover circle {
     stroke-width: 2px;
     stroke: rgb(0,0,0);
+}
+
+.card.text-white {
+    min-height: 260px;
 }
