- Renaming for better understanding - Rearrange code - Refactor analysis controller - Added autowire by constructor - Added logger messages - Restyle UI code

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -13,8 +13,8 @@
 }
 
 .custom-wrapper {
-    margin-right: 0 !important;
-    margin-top: 80px !important;
+    margin-top: 65px !important;
+    width: 99%;
 }
 
 .custom-center {
