- Refactored code in several services - Added penalty point service - Fixed issue: user properties not loading in time - Fixed some css: sizing and fitting in page

--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -107,12 +107,12 @@ g.node:hover circle {
 
 #v-pills-aa-spof {
     width: 100%;
-    height: 75%;
+    height: 71%;
 }
 
 #v-pills-aa-conglomerate {
     width: 100%;
-    height: 75%;
+    height: 71%;
 }
 
 #add-delete svg {
@@ -135,4 +135,15 @@ g.node:hover circle {
 
 #top-bar {
     width: 100%;
+}
+
+.badge-custom {
+    font-size: 11px;
+}
+
+.periodOfTimeStroke {
+    fill: white;
+    stroke: black;
+    stroke-width: 0.4px;
+    stroke-linejoin: round;
 }
