--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -108,16 +108,17 @@ g.node:hover circle {
 #periodoftime {
     width: 100%;
     height: 88%;
+    background-color: grey;
 }
 
 #v-pills-aa-spof {
     width: 100%;
-    height: 71%;
+    height: 89%;
 }
 
 #v-pills-aa-conglomerate {
     width: 100%;
-    height: 71%;
+    height: 89%;
 }
 
 #add-delete svg {
@@ -148,7 +149,19 @@ g.node:hover circle {
 
 .periodOfTimeStroke {
     fill: white;
-    stroke: black;
+    stroke: white;
     stroke-width: 0.4px;
     stroke-linejoin: round;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
