Fixed errors when colouring antipatterns conglomerate/spof. Fixed <span> not being clickable on nav tab. Improved files and periods chart, with a more interactive one.

--- a/src/main/webapp/resources/css/mapStyle.css
+++ b/src/main/webapp/resources/css/mapStyle.css
@@ -106,9 +106,7 @@ g.node:hover circle {
 }
 
 #periodoftime {
-    width: 100%;
-    height: 88%;
-    background-color: grey;
+    background-color: lightgrey;
 }
 
 #v-pills-aa-spof {
